--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ img {
 }
 .nav-link.studio::after {
   content: '';
-  width: 48px;
+  width: 100%;
   height: 4px;
   background: #404bbf;
   border-radius: 2px;
@@ -201,6 +201,50 @@ img {
 }
 .hero-button:focus {
   background-color: var(--pressed-state);
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  min-width: 408px;
+  min-height: 576px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+.modal-button {
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  height: 24px;
+  width: 24px;
+  cursor: pointer;
+  fill: currentColor;
+  margin: 24px 24px 528px 360px;
+}
+.modal-icon {
+  width: 8px;
+  height: 8px;
 }
 .advantages {
   background-color: var(--background);
@@ -573,8 +617,33 @@ img {
 .projects-link {
   text-decoration: none;
 }
-
-.projects-icon {
+.projects-link:hover .projects-card::before {
+  transform: translateY(0);
+}
+.projects-link:focus .projects-card::before {
+  transform: translateY(0);
+}
+.projects-card {
+  position: relative;
+  overflow: hidden;
+}
+.projects-card::before {
+  position: absolute;
+  content: '';
+  display: inline-block;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.projects-card:hover::before {
+  opacity: 1;
+}
+.projects-card:focus::before {
+  opacity: 1;
 }
 .projects-text {
   padding-top: 32px;
