--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,8 @@ img {
 
 .header-logo {
   margin-right: 76px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  /*padding-top: 24px;
+  padding-bottom: 24px;*/
   color: var(--primary-brand);
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -89,25 +89,16 @@ img {
   letter-spacing: 0.02em;
   color: var(--dark);
   text-decoration: none;
+  display: block;
   padding-top: 24px;
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
 }
-.nav-link.studio {
+.nav-link.current {
+  color: var(--pressed-state);
 }
-.nav-link.studio::after {
-  content: '';
-  width: 100%;
-  height: 4px;
-  background: #404bbf;
-  border-radius: 2px;
-  position: absolute;
-  display: block;
-  left: 0;
-  bottom: 0;
-}
-.nav-link.portfolio::after {
+.nav-link.current::after {
   content: '';
   width: 100%;
   height: 4px;
@@ -238,9 +229,16 @@ img {
   border-radius: 50%;
   height: 24px;
   width: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   fill: currentColor;
-  margin: 24px 24px 528px 360px;
+  margin: 24px 24px auto auto;
+}
+.modal-button:hover {
+  background-color: var(--pressed-state);
+  fill: #ffffff;
 }
 .modal-icon {
   width: 8px;
@@ -441,13 +439,11 @@ img {
   border-radius: 4px;
   color: var(--subtle-text);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link:hover,
 .customers-link:focus {
   border: 1px solid var(--pressed-state);
-  fill: var(--pressed-state);
   color: var(--pressed-state);
 }
 .customers-icon {
@@ -617,17 +613,17 @@ img {
 .projects-link {
   text-decoration: none;
 }
-.projects-link:hover .projects-card::before {
+.projects-link:hover .portfolio-overlay::before {
   transform: translateY(0);
 }
-.projects-link:focus .projects-card::before {
+.projects-link:focus .portfolio-overlay::before {
   transform: translateY(0);
 }
-.projects-card {
+.portfolio-overlay {
   position: relative;
   overflow: hidden;
 }
-.projects-card::before {
+.portfolio-overlay::before {
   position: absolute;
   content: '';
   display: inline-block;
@@ -639,12 +635,35 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.projects-card:hover::before {
+.portfolio-overlay:hover::before {
   opacity: 1;
 }
-.projects-card:focus::before {
+.portfolio-overlay:focus::before {
   opacity: 1;
 }
+.text-overlay {
+  letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 40px 32px;
+  color: var(--light);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--pressed-state);
+}
+.projects-link:hover .text-overlay {
+  transform: translateY(0);
+}
+.projects-link:focus .text-overlay {
+  transform: translateY(0);
+}
+
 .projects-text {
   padding-top: 32px;
   padding-bottom: 32px;
